nodePort update of k3d
Signed-off-by: Christian Hernandez <christian@chernand.io>

--- a/.devcontainer/manifests/k3d-dev.yaml
+++ b/.devcontainer/manifests/k3d-dev.yaml
@@ -9,6 +9,15 @@ ports:
   - port: 30272:30272
     nodeFilters:
       - server:*
+  - port: 30180:30180
+    nodeFilters:
+      - server:*
+  - port: 30181:30181
+    nodeFilters:
+      - server:*
+  - port: 30182:30182
+    nodeFilters:
+      - server:*
 options:
   k3d:
     wait: true
