--- a/apps-disabled/gobg-dev.yaml
+++ b/apps-disabled/gobg-dev.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: https://github.com/<repo>
+    repoURL: https://github.com/michael-mcnairy-kunai/gitops-masterclass-applications-template.git
     targetRevision: main
     path: kustomize/env/overlays/dev/
   destination:
