--- a/apps-disabled/appset-gobg.yaml
+++ b/apps-disabled/appset-gobg.yaml
@@ -10,6 +10,8 @@ spec:
   - list:
       elements:
       - environment: dev
+        # - cluster: development
+          # url: https://1.2.3.4
       - environment: stage
       - environment: prod
   template:      
